<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mafi.activity.WifiConnectActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ssidlabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/ssid"
            android:text="@string/ssid" />

        <EditText
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false" >
            
        </EditText>
  
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
	        android:id="@+id/pwdlabel" 
	        android:layout_width="70dp"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:labelFor="@+id/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:inputType="textPassword" />
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/seclabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sec_type_text"
            android:labelFor="@+id/security_type"/>

        <EditText
            android:id="@+id/security_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:focusable="false" />

    </LinearLayout>
    
    <Button 
        android:id="@+id/connect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/connect_btn_text"/>

</LinearLayout>
