<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mafi.activity.MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ssidlabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/ssid"
            android:text="@string/ssid" />

        <EditText
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
  
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
	        android:id="@+id/pwdlabel" 
	        android:layout_width="70dp"
	        android:layout_height="wrap_content"
	        android:text="@string/password"
	        android:labelFor="@+id/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:id="@+id/seclabel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/sec_type_text"
            android:labelFor="@+id/security_type"/>

        <Spinner
            android:id="@+id/security_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/security_option" />

    </LinearLayout>

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="@dimen/qrcode_width_height"
        android:layout_height="@dimen/qrcode_width_height"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/qrcode_margin"
        android:background="@color/qrcode_default_color" />
    
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="@dimen/save_btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_btn_text"/>

</LinearLayout>
</ScrollView>
